# yt-stdl

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml  yt-stdl.Dockerfile
app/: __init__.py  common.py  schema.py  search.py  settings.py  subtitle.py
