[project]
name = "yt-stdl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.185.0",
    "orjson>=3.11.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "youtube-transcript-api>=1.2.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 88
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
  "app/__version__.py",
  "pyproject.toml:version"
]

update_changelog_on_bump = true